Lots of cleaning up

--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -178,7 +178,7 @@
   
   <script id="column-template" type="x-tmpl-mustache">
     <h3><a href="info?col_id={{col_id}}">{{col_name}} <small>({{col_id}})</small></a></h3>
-    <strong>Group: </strong> <a href="info?col_group_id={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
+    <strong>Group: </strong> <a href="/sift/info/?col_group_id={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
     <strong>Area: </strong> {{area}} <small>km<sup>2</sup></small><br>
     <strong>Age: </strong> {{b_age}} - {{t_age}} <small>Ma</small> <br>
     <strong>Sections: </strong> {{sections.length}} <br>
