--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -7,8 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="css/styles.min.css" />
-  <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">-->
-  <!--<link href="//fonts.googleapis.com/css?family=Maven+Pro&text=macrostrat" rel="stylesheet" type="text/css">-->
 
   <style>
     
@@ -193,6 +191,6 @@
   <script src="js/libs.js"></script>
 
   <script async src="js/common.js"></script>
-  <script async src="js/map.js"></script>
+  <script async src="js/root.js"></script>
 </body>
 </html>
