--- a/packages/sift/info/index.html
+++ b/packages/sift/info/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="../css/styles.min.css" />
   <link rel="stylesheet" href="../css/lib/bootstrap.min.css" />
-  <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">-->
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <!--<link href="//fonts.googleapis.com/css?family=Maven+Pro&text=macrostrat" rel="stylesheet" type="text/css">-->
   <style>
     html, body {
@@ -41,9 +41,25 @@
       text-decoration: none;
     }
 
-    #map {
+    #map, #waiting {
       width: 100%;
       height: 400px;
+    }
+    #waiting {
+      background-color: rgba(255,255,255,0.5);
+      position: absolute;
+      display: table;
+      z-index: 10000;
+      margin-top: -400px;
+      visibility: hidden;
+    }
+    .waiting-container {
+      margin: 0 auto;
+      text-align: center;
+      display: table-cell;
+      vertical-align: middle;
+      font-size: 60px;
+      color: #990000;
     }
     #not-map {
       padding: 20px;
@@ -273,6 +289,11 @@
   <div class="mycontainer">
     <div class="page-title"></div>
     <div id="map"></div>
+    <div id="waiting">
+      <div class="waiting-container">
+        <i class="fa fa-circle-o-notch fa-spin"></i>
+      </div>
+    </div>
     <div id="not-map">
       <div id="stats"></div>
       <div class="name-hierarchy"></div>
@@ -591,7 +612,7 @@
 
             // Need to make sure belongsTo doesn't = 0 when it shouldn't (ex: strat_name_id=9574)
             var previousRank = 1;
-            while (belongsTo === 0 && d.strat_name_id != highestRank[1]) {
+            while (belongsTo === 0 && d.strat_name_id != strat_name_id) {
               belongsTo = d[rankMap[rankMapOrder[d.rank] - previousRank] + "_id"];
               previousRank--;
             }
@@ -715,6 +736,9 @@
 
       function drawLithologyChart(data) {
         console.log("lithChart", data)
+        if (!data.length) {
+          data = [{name: 'None', y: 1, color: '#EEEEEE'}];
+        }
         $('.lithologyChart').highcharts({
             chart: {
               plotBackgroundColor: null,
@@ -756,6 +780,10 @@
 
       function drawEnvironChart(data) {
         console.log("environChart", data)
+        if (!data.length) {
+          data = [{name: 'None', y: 1, color: '#EEEEEE'}];
+        }
+
         $('.environChart').highcharts({
             chart: {
               plotBackgroundColor: null,
@@ -930,12 +958,8 @@
         },
         onEachFeature: function (feature, layer) {
           layer.on("click", function(d) { 
-           // var rendered = Mustache.render(columnTemplate, d.target.feature.properties);
-           // setUnitInfoContent(rendered, d.latlng);
             window.location = "/sift/info/?col_id=" + d.target.feature.properties.col_id; 
-          })
-          //var popup = Mustache.render(templates.popup, feature.properties);
-          //layer.bindPopup(popup);
+          });
         }
       }).addTo(map);
 
@@ -986,6 +1010,7 @@
     }
 
     function swapMapView(strat_name_id) {
+      $("#waiting").css("visibility", "visible");
       if (typeof(gmusGeology) == "undefined" ) {
         $.getJSON(apiUrl + "/api/v2/geologic_units/gmus?format=topojson_bare&strat_name_id=" + strat_name_id, function(data) {
           gmusGeology = L.geoJson(topojson.feature(data, data.objects.output), {
@@ -1017,6 +1042,7 @@
           map.addLayer(columnLayer);
           map.removeLayer(gmusGeology);
         }
+        $("#waiting").css("visibility", "hidden");
       }
         
     }
