More style updates

--- a/packages/sift/info/index.html
+++ b/packages/sift/info/index.html
@@ -113,6 +113,7 @@
     }
     .hierarchy-link:hover {
       color: #990000;
+      text-decoration: none;
     }
     .active-strat-name {
       background-color: rgba(153, 0, 0, 0.3);
