First commit of refactor...finally

--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -6,191 +6,15 @@
   <meta http-equiv="Content-Language" content="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="css/styles.min.css" />
+  <link rel="stylesheet" href="src/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="dist/css/styles.min.css"/>
 
-  <style>
-    
-    .controls {
-      position: absolute;
-      z-index: 1000;
-      margin: 0;
-    }
-    .menu {
-      position: absolute;
-      bottom: -45px;
-      padding-left: 9px;
-      padding-bottom: 7px;
-    }
-    #menu-control {
-      left: -45px;
-    }
-    #attr {
-      right: -45px;
-      padding-right: 9px;
-      padding-bottom: 7px;
-    }
-
-    #info-link:hover {
-      text-decoration: none;
-    }
-
-    .unit_info {
-      position: absolute;
-      z-index: 100000;
-      background-color: rgba(0,0,0,0.6);
-      color: #ccc;
-      overflow-y: scroll;
-      line-height: 23px;
-      -webkit-transition: all 0.6s ease;
-      -moz-transition: all 0.6s ease;
-      -o-transition: all 0.6s ease;
-      -ms-transition: all 0.6s ease;
-      transition: all 0.6s ease;
-      transform: translate3d(0,0,0);
-      -webkit-transform: translate3d(0,0,0);
-      -webkit-perspective: 1000;
-      -webkit-backface-visibility: hidden;
-    }
-
-    #unit_info_left {
-      width: 60%;
-      top: 50px;
-      height: 95%;
-      left: -60%;
-      max-width: 500px;
-      overflow: hidden;
-      background-color: rgba(0,0,0,0.84);
-    }
-
-    #unit_info_left.moveLeft {
-      left: 0;
-    }
-
-    #unit_info_right {
-      width: 60%;
-      top: 0;
-      height: 100%;
-      right: -60%;
-      max-width: 500px;
-    }
-
-    .menu-header {
-      padding: 20px;
-      font-size: 2em;
-      display: table;
-      font-family: "Maven Pro", sans-serif;
-    }
-    .menu-header > img {
-      height: 33px;
-      display: table-cell;
-    }
-    .menu-header > #title {
-      display: table-cell;
-      vertical-align: middle;
-      padding-left: 15px;
-    }
-  
-    #unit_info_right.moveRight {
-      right: 0;
-    }
-
-    #unit_info_bottom {
-      width: 100%;
-      bottom: -62%;
-      height: 60%;
-      max-height: 500px;
-    }
-
-    #unit_info_bottom.moveDown {
-      bottom: 0;
-    }
-
-    .unit_info_content {
-      padding: 25px;
-      padding-bottom: 140px;
-      z-index: 0;
-      height: auto;
-    }
-
-    .unit_info_content > a, .unit_info_content > h3 > a {
-      color: #aaa;
-    }
-
-    .close {
-      color: #fff;
-      position: absolute;
-      cursor: pointer;
-      font-size: 25px;
-      padding: 20px;
-      top: 0;
-    }
-    .close.left {
-      right: 0;
-      display: table-cell;
-      vertical-align: middle;
-      float: right;
-    }
-    .close.bottom {
-      right: 0;
-    }
-    .close.right {
-      left: 0;
-    }
-
-    @media(max-width: 400px) {
-      .leaflet-control-zoom {
-        display: none;
-      }
-    }
-
-    </style>
 </head>
 <body>
-  <div id="header">
-    <div class="headerItem left">
-      <a href="/"><img src="img/logo_red.png" class="header-logo"></a>
-      <a href="/sift">
-        <h3 class="header-title"><i>sift</i></h3>
-      </a>
-    </div>
-    <div class="headerItem right">
-      <div class="searchBox typeahead">
-        <input class="searcher" type="text" placeholder="Search" data-provide="typeahead">
-      </div>
-    </div>  
-  </div>
-  <div class="container">
-    <div id="map"></div>
-    <div id="not-map">
 
-      <div id="unit_info_right" class="unit_info">
-        <div class="close right">x</div>
-        <div class="unit_info_content"></div>
-      </div>
-      <div id="unit_info_bottom" class="unit_info">
-        <div class="close bottom">x</div>
-        <div class="unit_info_content"></div>
-      </div>
-    </div>
-  </div>
-  
-  <script id="column-template" type="x-tmpl-mustache">
-    <h3><a href="info/?col_id={{col_id}}">{{col_name}} <small>({{col_id}})</small></a></h3>
-    <strong>Group: </strong> <a href="/sift/info/?col_group_id={{col_group_id}}">{{col_group}} <small>({{col_group_id}})</small></a><br>
-    <strong>Area: </strong> {{area}} <small>km<sup>2</sup></small><br>
-    <strong>Age: </strong> {{b_age}} - {{t_age}} <small>Ma</small> <br>
-    <strong>Sections: </strong> {{sections.length}} <br>
-    <strong>Units: </strong> {{units.length}} <br>
-    <strong>Thickness: </strong> {{max_thick}} - {{min_thick}} <br>
-    <strong>PBDB collections: </strong> {{pbdb_collections}} <br>
-    <strong>PBDB occurrences: </strong> {{pbdb_occs}} <br>
-    <strong>Lithology: </strong> {{#lith_types}}{{.}}, {{/lith_types}} <br>
-    <strong>Lith. thickness: </strong> {{lith_max_thick}} - {{lith_min_thick}}
-  </script>
+  <div class="react"></div>
 
-  <script src="js/libs.js"></script>
+  <script src="dist/js/bundle.min.js"></script>
 
-  <script async src="js/common.js"></script>
-  <script async src="js/root.js"></script>
 </body>
 </html>
