Try and fix safari issue

--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="Content-Language" content="en">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" type="text/css" href="src/css/bootstrap.min.css"/>
-  <link rel="stylesheet" type="text/css" href="dist/css/styles.min.css"/>
+  <link rel="stylesheet" type="text/css" href="./src/css/bootstrap.min.css"/>
+  <link rel="stylesheet" type="text/css" href="./dist/css/styles.min.css"/>
 
 </head>
 <body>
 
   <div class="react"></div>
 
-  <script type="text/javascript" src="dist/js/bundle.min.js"></script>
+  <script type="text/javascript" src="./dist/js/bundle.min.js"></script>
 
 </body>
 </html>
