--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="react"></div>
-  
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -22,7 +22,7 @@
     ga('create', 'UA-59921731-1', 'auto');
     ga('send', 'pageview');
   </script>
-
+  <script type="text/javascript" src="./dist/js/leaflet.min.js"></script>
   <script type="text/javascript" src="./dist/js/bundle.min.js"></script>
 
 </body>
