--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta http-equiv="Content-Language" content="en">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <link rel="stylesheet" type="text/css" href="dist/css/styles.css"/>
-
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.43.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
   <div class="wrapper container-fluid">
     <div id="react"></div>
   </div>
 
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.43.0/mapbox-gl.js'></script>
   <script src="dist/js/vendors.js"></script>
   <script src="dist/js/bundle.js"></script>
 </body>
