more mobile friendly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro" rel="stylesheet">
 </head>
 <body>
-  <div class="wrapper container-fluid">
+  <div class="wrapper container-fluid main-container">
     <div id="react"></div>
   </div>
 
