property view mode init commit

--- a/packages/column-footprint-editor/src/index.html
+++ b/packages/column-footprint-editor/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My Parcel Project</title>
+    <title>Clever Name Here</title>
   </head>
 
   <body>
