changelog, one char change for moving connected points in same polygon-line; removed some consoling

--- a/packages/column-footprint-editor/src/index.html
+++ b/packages/column-footprint-editor/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Clever Name Here</title>
+    <title>Column Topology</title>
   </head>
 
   <body>
