--- a/template.html
+++ b/template.html
@@ -4,6 +4,12 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Language" content="en" />
+    <meta name="mobile-wep-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover"
