Fix sloppy code for age chips

--- a/template.html
+++ b/template.html
@@ -20,9 +20,7 @@
     />
   </head>
   <body>
-    <div class="wrapper container-fluid main-container">
-      <div id="react"></div>
-    </div>
+    <div id="app-container"></div>
 
     <script>
       (function (i, s, o, g, r, a, m) {
