Updated deployment scripts

--- a/deployment/index.html
+++ b/deployment/index.html
@@ -8,13 +8,13 @@
     <h1>Macrostrat <code>v2</code> development server</h1>
     <ul>
       <li>
-        <a href="/map">Map interface</a>
+        <a href="map/">Map interface</a>
       </li>
       <li>
-        <a href="/api">API</a>
+        <a href="api/">API</a>
       </li>
       <li>
-        <a href="/tiles">Tile server</a>
+        <a href="tiles/">Tile server</a>
       </li>
     </ul>
   </body>
