--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Macrostrat</title>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Language" content="en" />
     <meta name="mobile-wep-app-capable" content="yes" />
@@ -18,10 +18,10 @@
       href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Sans+Pro"
       rel="stylesheet"
     />
+    <script type="module" src="./index.ts" type="text/javascript"></script>
   </head>
   <body>
     <div id="app-container"></div>
-
     <script>
       (function (i, s, o, g, r, a, m) {
         i["GoogleAnalyticsObject"] = r;
