Sift works with vite

--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -8,7 +8,6 @@
 
   <link href="https://fonts.googleapis.com/css?family=Maven+Pro&amp;text=macrostrat" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="./dist/css/styles.min.css"/>
-
 </head>
 <body>
 
@@ -23,7 +22,8 @@
     ga('send', 'pageview');
   </script>
   <script type="text/javascript" src="./dist/js/leaflet.min.js"></script>
-  <script type="text/javascript" src="./dist/js/bundle.min.js"></script>
+  <!--<script type="text/javascript" src="./dist/js/bundle.min.js"></script> -->
+  <script type="module" src="./src/js/index.tsx"></script>
 
 </body>
 </html>
