--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -1,29 +1,46 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Macrostrat Sift</title>
-  <meta charset="utf-8" />
-  <meta http-equiv="Content-Language" content="en">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <title>Macrostrat Sift</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="Content-Language" content="en" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link href="https://fonts.googleapis.com/css?family=Maven+Pro&amp;text=macrostrat" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" type="text/css" href="./dist/css/styles.min.css"/>
-</head>
-<body>
+    <link
+      href="https://fonts.googleapis.com/css?family=Maven+Pro&amp;text=macrostrat"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" type="text/css" href="./dist/css/styles.min.css" />
+  </head>
+  <body>
+    <div class="react"></div>
 
-  <div class="react"></div>
-
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-59921731-1', 'auto');
-    ga('send', 'pageview');
-  </script>
-  <script type="text/javascript" src="./dist/js/leaflet.min.js"></script>
-  <!--<script type="text/javascript" src="./dist/js/bundle.min.js"></script> -->
-  <script type="module" src="./src/js/index.tsx"></script>
-
-</body>
+    <script>
+      (function (i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+        (i[r] =
+          i[r] ||
+          function () {
+            (i[r].q = i[r].q || []).push(arguments);
+          }),
+          (i[r].l = 1 * new Date());
+        (a = s.createElement(o)), (m = s.getElementsByTagName(o)[0]);
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(
+        window,
+        document,
+        "script",
+        "//www.google-analytics.com/analytics.js",
+        "ga"
+      );
+      ga("create", "UA-59921731-1", "auto");
+      ga("send", "pageview");
+    </script>
+    <script type="text/javascript" src="./dist/js/leaflet.min.js"></script>
+    <!--<script type="text/javascript" src="./dist/js/bundle.min.js"></script> -->
+    <script type="module" src="./src/js/index.tsx"></script>
+  </body>
 </html>
