--- a/packages/globe-dev/index.html
+++ b/packages/globe-dev/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8" />
     <title>Vite Cesium Example</title>
-    <script type="module" src="./src/entry.standalone.ts" type="text/javascript"></script>
+    <script
+      type="module"
+      src="./src/entry.standalone.ts"
+      type="text/javascript"
+    ></script>
   </head>
   <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
   </body>
 </html>
