--- a/packages/sift/index.html
+++ b/packages/sift/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" type="text/css" href="./dist/css/styles.min.css" />
+    <link rel="stylesheet" type="text/css" href="/dist/css/styles.min.css" />
   </head>
   <body>
     <div class="react"></div>
@@ -39,8 +39,6 @@
       ga("create", "UA-59921731-1", "auto");
       ga("send", "pageview");
     </script>
-    <script type="text/javascript" src="./dist/js/leaflet.min.js"></script>
-    <!--<script type="text/javascript" src="./dist/js/bundle.min.js"></script> -->
-    <script type="module" src="./src/js/index.tsx"></script>
+    <script type="module" src="/src/js/index.tsx"></script>
   </body>
 </html>
